# starting-ragchatbot-codebase

./: CLAUDE.md  pyproject.toml
backend/: ai_generator.py  app.py  document_processor.py  search_tools.py  vector_store.py
backend/tests/: conftest.py  run_tests.py  test_ai_generator.py  test_api_endpoints.py  test_course_search_tool.py  test_rag_system.py  test_vector_store_integration.py
frontend/: index.html  script.js  style.css
scripts/: format_code.sh  quality_check.sh
